--- a/config.yml
+++ b/config.yml
@@ -1,31 +1,25 @@
 estimator:
-  # - name: random-forest-regresor
-  #   params:      
-  #     random state: 0
-  # - name: GradientBoostingRegressor
-  #   params:
-  #     random_state: 0
+
   - name: lineal_regression
+    params: {}
+
 
       
 
 data:
-  filepath: ./dataset/train_classification.csv
+  filepath: ./dataset/train_regression.csv
 
 metrics:
-  #- name: mean absolute error
-  #  params: {}
-  - name: f1 Score
+  - name: mean absolute error
     params: {}
 
 search:
   jobs: -1
   grid:
-    - name: logistic_regression
+    - name: lineal_regression
       params:
-        #n_estimators: [50, 100, 200]
-        #n_init: [5, 10, 15, 20, 25, 30, 35]
-        solver: [newton-cg,lbfgs,liblinear,sag,saga]
+        fit_intercept: [True, False] #Linear Regression
+        positive: [True, False] #Linear Regression
 
 
 export:
